--- a/src/App.css
+++ b/src/App.css
@@ -118,3 +118,19 @@ ul {
     height: 30px;
     float: right;
 }
+
+.update-id {
+    width: 30%;
+    height: 30px;
+    line-height: 24px;
+    padding: 0px 5px ;
+    float: left;
+}
+
+.update-input {
+    width: 50%;
+    height: 30px;
+    line-height: 24px;
+    padding: 0px 5px;
+    float: left;
+}
